<resources>
    <string name="app_name">短信网关监控</string>
    <string name="app_name_cn">短信网关监控工具</string>
    <string name="log_history">历史日志</string>
    <string name="action_settings">Settings</string>
    <string name="action_mine">我的</string>

    <string name="title_activity_settings">设置</string>
    <string name="modify_str">修改</string>

    <string name="sms_gateway">短信网关</string>
    <string name="sms_gateway_no">短信网关号码：</string>
    <string name="sms_content">短信内容：</string>
    <string name="interval_heart">心跳监测间隔：</string>
    <string name="interval_recv">短信回复间隔：</string>

    <string name="send">发送</string>
    <string name="send_wakeup">发送唤醒短信</string>
    <string name="log_str">日志</string>
    <string name="clear_log">清空日志</string>

    <string name="log_test">12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n12\n</string>
</resources>
