<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tv"
            app:cardCornerRadius="@dimen/corner_cardview"
            app:cardElevation="@dimen/margin_tv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_tv">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/title_activity_settings"
                        android:textStyle="bold" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_tv"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sms_gateway_no" />

                    <EditText
                        android:id="@+id/et_gatewayno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_tv"
                        android:layout_weight="1"
                        android:padding="@dimen/margin_tv"
                        android:text="1312331310"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/txt_tv" />

                    <ImageView
                        android:id="@+id/iv_edit_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_edit_selector"
                        android:src="@drawable/ic_settings_white_24dp"
                        android:clickable="true"
                        android:padding="@dimen/padding_layout" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/margin_tv"
                    android:layout_marginRight="@dimen/margin_tv"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_tv"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interval_heart" />

                    <EditText
                        android:id="@+id/et_heart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_tv"
                        android:layout_weight="1"
                        android:padding="@dimen/margin_tv"
                        android:lines="1"
                        android:text="10"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/txt_tv" />

                    <ImageView
                        android:id="@+id/iv_edit_heart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_edit_selector"
                        android:src="@drawable/ic_settings_white_24dp"
                        android:clickable="true"
                        android:padding="@dimen/padding_layout" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/margin_tv"
                    android:layout_marginRight="@dimen/margin_tv"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_tv"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interval_recv" />

                    <EditText
                        android:id="@+id/et_send_recv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_tv"
                        android:layout_weight="1"
                        android:lines="1"
                        android:padding="@dimen/margin_tv"
                        android:text="10"
                        android:textColor="@color/black_light"
                        android:textSize="@dimen/txt_tv" />

                    <ImageView
                        android:id="@+id/iv_edit_recv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_edit_selector"
                        android:src="@drawable/ic_settings_white_24dp"
                        android:clickable="true"
                        android:padding="@dimen/padding_layout" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_tv"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/corner_cardview"
            app:cardElevation="@dimen/margin_tv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_layout"
                        android:text="@string/log_str"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btn_clear_log"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/margin_tv"
                        android:background="@drawable/btn_delete_selector"
                        android:clickable="true"
                        android:padding="@dimen/padding_tv"
                        android:text="@string/clear_log"
                        android:textColor="@color/black_light" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_log"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin_layout"
                    android:layout_marginLeft="@dimen/margin_layout"
                    android:layout_marginRight="@dimen/margin_layout"
                    android:scrollbars = "vertical"
                    android:layout_weight="1"
                    android:background="@color/gray_light"
                    android:padding="@dimen/margin_tv"
                    android:text="这里有日志" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
